[kaccess] Use KWin to show visual bell

This works much better than trying it with a window, which is currently very broken with multiple or scaled displays

BUG: 488967
(cherry picked from commit 1011d1e32bc76c6dcd65b426edc103904f292f81)